# LabProgrammazione

./: CMakeLists.txt  Chat.cpp  Chat.h  Message.cpp  Message.h  Notifier.cpp  Notifier.h  Observer.h  Register.cpp  Register.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  ChatTest.cpp  MessageTest.cpp  NotifierTest.cpp  UserTest.cpp  runAllTests.cpp
